--- a/style.css
+++ b/style.css
@@ -515,11 +515,17 @@ margin-left: 680px;
 }
 
 .flipcard1 {
-  font-family: 'Bungee Shade', cursive;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
   font-size: 50px;
 }
 .purpose1{
-  font-family: 'Oswald', sans-serif;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
   font-size: 18px;
 }
 
@@ -528,11 +534,13 @@ margin-left: 680px;
 }
 
 .css-button-neumorphic {
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   min-width: 130px;
   height: 40px;
   color: #fff;
   padding: 5px 10px;
-  font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
@@ -540,7 +548,7 @@ margin-left: 680px;
   outline: none;
   border-radius: 5px;
   border: none;
-  background: #efefef;
+  background: white;
   box-shadow: 2px 2px 4px #c8d0e7, -1px -1px 3px #fff;
   color: #585858;
 }
@@ -549,11 +557,14 @@ margin-left: 680px;
 }
 
 .css-button-neumorphic1 {
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 20px;
+  font-style: normal;
   min-width: 250px;
   height: 80px;
   color: #fff;
   padding: 5px 10px;
-  font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
@@ -561,6 +572,7 @@ margin-left: 680px;
   outline: none;
   border-radius: 5px;
   border: none;
+  background: rgb(49, 49, 49) !important;
   box-shadow: 2px 2px 4px #c8d0e7, -1px -1px 3px #fff;
   display: block;
   margin-left: auto;
@@ -633,4 +645,97 @@ margin-left: 680px;
   background-color: rgb(49, 49, 49);
   border-radius: 15px;
   white-space: nowrap;
+}
+
+.resume1{
+  border: solid 2px;
+  border-color: white;
+  border-radius: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.skill-box{
+  width: 100%;
+  margin: 25px 0;
+}
+
+.skill-box .title{
+  display: block;
+  font-size: 14px;
+  font-weight: 600;
+  color: #333;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 20px;
+  font-style: normal;
+}
+.skill-box .skill-bar{
+  height: 8px;
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 6px;
+  background: rgba(0,0,0,0.1);
+}
+.skill-bar .skill-per{
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 90%;
+  border-radius: 6px;
+  background: linear-gradient(90deg, hsla(243, 95%, 23%, 1) 0%, hsla(243, 44%, 11%, 1) 90%);
+  animation: progress 0.4s ease-in-out forwards;
+  opacity: 0;
+}
+.skill-per.css{
+  width: 70%;
+  animation-delay: 0.1s;
+}
+.skill-per.javascript{
+  width: 50%;
+  animation-delay: 0.2s;
+}
+.skill-per.digitalMedia{
+  width: 30%;
+  animation-delay: 0.3s;
+}
+@keyframes progress {
+  0%{
+      width: 0;
+      opacity: 1;
+  }
+  100%{
+      opacity: 1;
+  }
+}
+.skill-per .tooltip{
+  position: absolute;
+  right: -15px;
+  top: -38px;
+  font-size: 9px;
+  font-weight: 500;
+  color: black;
+  padding: 2px 6px;
+  border-radius: 3px;
+  background: white;
+  z-index: 1;
+  opacity: 1;
+}
+.tooltip::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -8px;
+  height: 10px;
+  width: 10px;
+  z-index: -1;
+ 
+  opacity: 1;
+}
+
+.box1{
+  background: rgb(49, 49, 49);
+  border: solid 2px;
+  border-color: white;
+  border-radius: 15px;
 }
