--- a/style2.css
+++ b/style2.css
@@ -5,6 +5,123 @@ body {
     flex-direction: column;
     font-family: sans-serif;
 }
+
+.navbar a {
+    font-family: "Antonio", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+   }
+  nav {
+    width: 80%;
+    height: 100px;
+    margin: 0 auto;
+    padding: 50px 0;
+    background-color: rgb(49, 49, 49);
+    border-radius: 25px;
+  }
+  .navBarName {
+   font-size:50px;
+   font-family: "Antonio", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+  nav ul {
+    list-style: none;
+    text-align: center;
+  }
+  nav ul li {
+    display: inline-block;
+  }
+  nav ul li {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+  }
+  nav ul li,
+  nav ul li :after,
+  nav ul li :before {
+    transition: all 0.5s;
+  }
+  nav ul li a:hover {
+    color: rgb(182, 49, 49);
+  }
+  
+  /* SHIFT */
+  nav.stroke ul li a,
+  nav.fill ul li a {
+    position: relative;
+  }
+  nav.stroke ul li a:after,
+  nav.fill ul li a:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: #aaa;
+    height: 1px;
+  }
+  nav.stroke ul li a:hover:after {
+    width: 100%;
+  }
+  
+  nav.fill ul li a {
+    transition: all 2s;
+  }
+  
+  nav.fill ul li a:after {
+    text-align: left;
+    content: '.';
+    margin: 0;
+    opacity: 0;
+  }
+  nav.fill ul li a:hover {
+    color: #fff;
+    z-index: 1;
+  }
+  nav.fill ul li a:hover:after {
+    z-index: -10;
+    animation: fill 1s forwards;
+    -webkit-animation: fill 1s forwards;
+    -moz-animation: fill 1s forwards;
+    opacity: 1;
+  }
+  
+  @-webkit-keyframes fill {
+    0% {
+      width: 0%;
+      height: 1px;
+    }
+    50% {
+      width: 100%;
+      height: 1px;
+    }
+    100% {
+      width: 100%;
+      height: 100%;
+      background: #a0b3bc;
+    }
+  }
+
+.previous {
+    margin-top: 80px;
+    font-size: 80px;
+    font-family: "Antonio", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    border: solid;
+  border-color: white;
+  border-radius: 15%;
+}
+
 h1 {
     color: white;
 }
