--- a/style.css
+++ b/style.css
@@ -707,10 +707,10 @@ margin-left: 680px;
   top: -38px;
   font-size: 9px;
   font-weight: 500;
-  color: black;
+  color: white;
   padding: 2px 6px;
   border-radius: 3px;
-  background: white;
+  background: black;
   z-index: 1;
   opacity: 1;
 }
