added contact form, fixed all borders

--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ section h1 {
   font-size: 60px;
   border: solid;
   border-color: white;
-  border-radius: 15%;
+  border-radius: 25px;
   
 }
 .card-title{
