--- a/style2.css
+++ b/style2.css
@@ -119,7 +119,7 @@ body {
     font-style: normal;
     border: solid;
   border-color: white;
-  border-radius: 15%;
+  border-radius: 25px;
 }
 
 h1 {
@@ -201,7 +201,7 @@ h1 {
 .aboutText1{
   border: solid;
   border-color: white;
-  border-radius: 8%;
+  border-radius: 25px;
   font-family: "Antonio", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
@@ -212,7 +212,7 @@ h1 {
 .max1{
   border: solid;
   border-color: white;
-  border-radius: 15%;
+  border-radius: 25px;
   height: 600px;
   width: 250px;
 }
@@ -242,4 +242,37 @@ h1 {
 
   .css-button-neumorphic1:active {
   box-shadow: inset 1px 1px 3px #e5e8f1, inset -1px -1px 3px #fff;
+}
+
+input{
+  margin-left:auto !important;
+  margin-right:auto !important;
+  display: block;
+  border: solid;
+  border-color: white;
+  border-radius: 10px;
+  background: transparent;
+  color:white;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  width: 400px;
+
+}
+
+.form1{
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 30px;
+  font-style: normal;
+}
+
+.form2{
+  border: solid;
+  border-color: white;
+  border-radius: 25px;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 20px;
+  font-style: normal;
 }
