--- a/style2.css
+++ b/style2.css
@@ -162,28 +162,34 @@ h1 {
 }
 
 .stars, .twinkling, .clouds {
-    position:fixed;
-    top:0;
-    left:0%;
-    right:0%;
-    bottom:0%;
-    width:100%;
-    height:100%;
-    overflow-y:scroll;
-    overflow-x:hidden;
-  }
-  
-  .stars {
-    background:#000 url('img/stars.png');
-    height: 500%;
-    z-index:0;
-  }
-  
-  .twinkling{
-    background:transparent url(img/twinkling.png) repeat top center;
-    z-index:1;
-    animation:move-twink-back 200s linear infinite;
-  }
+  position:fixed;
+  top:0;
+  left:0%;
+  right:0%;
+  bottom:0%;
+  width:100%;
+  height:100%;
+  overflow-y:scroll;
+  overflow-x:hidden;
+}
+
+.stars {
+  background:#000 url('img/stars.png');
+  height: 500%;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(img/twinkling.png) repeat top center;
+  z-index:1;
+  animation:move-twink-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+
 
 .grid-item {
     height: 200px;
@@ -440,4 +446,39 @@ input{
     margin-bottom: 5px;
     color: var(--color-secondary);
     font-family: var(--font-primary);
+}
+
+input {
+  color: white !important;
+  border-radius: 20px;
+}
+
+.form-group{
+  border: solid 2px white;
+  border-radius: 20px;
+}
+
+.form-control{
+  background: transparent !important;
+  border: transparent !important;
+  color: white !important;
+  
+}
+
+.php-email-form{
+  border: solid 2px white;
+  border-radius: 50px;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
+
+.form-name{
+  color: white;
+  font-size: 30px;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
 }
