--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   scroll-behavior: smooth;
   cursor: none;
+  overflow-x: hidden;
 }
 
 :root {
@@ -12,9 +13,50 @@ html {
     height: 100%;
   }
 body {
-  background-color: black;
+  background-color: black !important;
   scroll-behavior: smooth;
+  cursor: none;
 }
+
+/* Custom cursor styles */
+.mf-cursor {
+  color: transparent;
+  border: 2px solid white; /* Thin white border */
+  background-color: transparent; /* Transparent background */
+  border-radius: 50%; /* Optional: Make the cursor circular */
+  width: 20px; /* Adjust size as needed */
+  height: 20px; /* Adjust size as needed */
+  pointer-events: none; /* Ensure the cursor does not block interactions */
+  position: absolute; /* Required for positioning */
+  transform: translate(-50%, -50%); /* Center the cursor on the pointer */
+  transition: transform 0.15s ease; /* Smooth transition */
+  z-index: 9999; /* Ensure the cursor is on top */
+}
+
+div{
+  cursor: none;
+}
+
+a {
+  cursor: none !important;
+}
+
+button{
+  cursor: none !important;
+}
+
+a {
+  cursor: none !important;
+}
+
+ul{
+  cursor: none !important;
+}
+
+li{
+  cursor: none !important;
+}
+
 .navbar a {
   font-family: "Antonio", sans-serif;
   font-optical-sizing: auto;
@@ -28,6 +70,7 @@ nav {
   padding: 50px 0;
   background-color: rgb(49, 49, 49);
   border-radius: 25px;
+  cursor: none;
 }
 .navBarName {
  font-size:50px;
@@ -454,15 +497,14 @@ margin-left: 680px;
 }
 
 .stars, .twinkling, .clouds {
-  position:fixed;
+
   top:0;
   left:0%;
   right:0%;
   bottom:0%;
-  width:100%;
-  height:100%;
-  overflow-y:scroll;
-  overflow-x:hidden;
+  width: 100% !important;
+  height: 100% !important;
+  
 }
 
 .stars {
@@ -759,47 +801,27 @@ li {
   font-style: normal;
 }
 
-/* Custom cursor styles */
-.mf-cursor {
-  color: transparent;
-  border: 2px solid white; /* Thin white border */
-  background-color: transparent; /* Transparent background */
-  border-radius: 50%; /* Optional: Make the cursor circular */
-  width: 20px; /* Adjust size as needed */
-  height: 20px; /* Adjust size as needed */
-  pointer-events: none; /* Ensure the cursor does not block interactions */
-  position: absolute; /* Required for positioning */
-  transform: translate(-50%, -50%); /* Center the cursor on the pointer */
-  transition: transform 0.15s ease; /* Smooth transition */
-  z-index: 9999; /* Ensure the cursor is on top */
-}
-
-
-
-
 .scroll-top {
   position: fixed;
-  visibility: hidden;
-  opacity: 0;
+  opacity: 1;
   right: 15px;
   bottom: 15px;
-  z-index: 995;
-  background: red;
-  width: 40px;
-  height: 40px;
-  border-radius: 4px;
+  background: rgb(49, 49, 49);
+  width: 110px;
+  height: 50px;
+  border: solid 2px white;
+  border-radius: 8px;
   transition: all 0.4s;
-}
-
-.scroll-top i {
-  font-size: 24px;
-  color: var(--color-white);
-  line-height: 0;
+  font-family: "Antonio", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  color: white;
+  font-size: 20px;
 }
 
 .scroll-top:hover {
-  background: rgba(var(--color-primary-rgb), 0.85);
-  color: var(--color-white);
+  background: rgb(61, 61, 61);
+  color: white;
 }
 
 .scroll-top.active {
